--- a/pom.xml
+++ b/pom.xml
@@ -29,12 +29,12 @@
         <repository>
             <id>deployment</id>
             <name>Internal Releases</name>
-            <url>http://3.16.51.71:8081/repository/nexus_spring//</url>
+            <url>http://18.220.242.160:8081/repository/new_server/</url>
         </repository>
         <snapshotRepository>
             <id>deployment</id>
             <name>Internal Snapshot Releases</name>
-            <url>http://3.16.51.71:8081/repository/New_snap/</url>
+            <url>http://18.220.242.160:8081/repository/snap_/</url>
         </snapshotRepository>
     </distributionManagement>
   <dependencies>
